Fix for uneven checkmark position.

--- a/resources/scss/public/filters/_radio.scss
+++ b/resources/scss/public/filters/_radio.scss
@@ -13,8 +13,8 @@
 	}
 
 	&__input {
-		width: 18px;
-		height: 18px;
+		width: 19px;
+		height: 19px;
 		border-radius: 20px;
 		box-sizing: border-box;
 		border: 2px solid #4F76A3;
