--- a/resources/scss/public/filters/_rating.scss
+++ b/resources/scss/public/filters/_rating.scss
@@ -11,8 +11,8 @@
 	}
 
 	&__input {
-		width: 18px;
-		height: 18px;
+		width: 19px;
+		height: 19px;
 		border-radius: 3px;
 		box-sizing: border-box;
 		border: 2px solid #4F76A3;
